# HelixOps

./: .gitignore  README.md
api/: .env.example  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 20260605_ac498a291fa0_create_auth_tables.py  20260607_bc025706d05e_add_clinic_and_staff_tables.py
api/app/: main.py
api/app/core/: config.py  dependencies.py  exceptions.py  logging.py  security.py
api/app/db/: base.py  session.py
api/app/models/: __init__.py  clinic.py  doctor_profile.py  user.py
api/app/repositories/: clinic_repository.py  user_repository.py
api/app/routers/: auth.py  clinics.py  health.py
api/app/schemas/: auth.py  clinic.py
api/app/services/: auth_service.py  clinic_service.py
artifacts/: frontend_architecture.md  helixops-roadmap.md  helixops_preai_workflow.md
